Added documentation for auth routes
