# api/v1/model.go
@@ -1,17 +1,15 @@
 package api
 
-import "github.com/PfMartin/wegonice-api/db"
-
 type authUserBody struct {
-	Email    string `json:"email,omitempty" binding:"required"` //TODO: Email validation
-	Password string `json:"password,omitempty" binding:"required,min=6"`
+	Email    string `json:"email,omitempty" binding:"required" example:"user@example.com"` //TODO: Email validation
+	Password string `json:"password,omitempty" binding:"required,min=6" example:"s3cr3tP@ssw0rd"`
 } // @name authUserBody
 
 type loginResponse struct {
-	SessionID             string  `json:"sessionId"`
-	AccessToken           string  `json:"accessToken"`
-	AccessTokenExpiresAt  int64   `json:"accessTokenExpiresAt"`
-	RefreshToken          string  `json:"refreshToken"`
-	RefreshTokenExpiresAt int64   `json:"refreshTokenExpiresAt"`
-	User                  db.User `json:"user"`
+	SessionID             string `json:"sessionId" example:"660c4b99bc1bc4aabe3e6cd1"`
+	AccessToken           string `json:"accessToken" example:"v2.local.example-session-token"`
+	AccessTokenExpiresAt  int64  `json:"accessTokenExpiresAt" example:"1714462120"`
+	RefreshToken          string `json:"refreshToken" example:"v2.local.example-refresh-token"`
+	RefreshTokenExpiresAt int64  `json:"refreshTokenExpiresAt" example:"1714462120"`
+	UserEmail             string `json:"userEmail" example:"user@example.com"`
 } // @name loginResponse
